--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "lint": "tsc --noEmit && eslint",
-    "test": "react-scripts test --watchAll=false",
-    "test:coverage": "react-scripts test --watchAll=false --coverage",
+    "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -50,6 +50,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^27.5.1",
     "typescript": "^4.9.3"
   }
 }
