--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "lint": "tsc --noEmit && eslint",
+    "lint": "tsc && eslint . --ext .js,.jsx,.ts,.tsx",
     "test": "react-scripts test",
     "test:coverage": "react-scripts test --coverage",
     "eject": "react-scripts eject"
@@ -51,6 +51,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^27.5.1",
+    "jest-watch-typeahead": "^0.6.5",
     "typescript": "^4.9.3"
   }
 }
